--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@ layout: default
 title: "Daniel Wilber, Product Designer"
 ---
 
-<h1>Hey there</h1>
+<h1>Hello, my name is Daniel Wilber.</h1>
+<h2>I co-founded a web design and development company called <a href="http://bondfire.co">Bondfire</a>.</h2>
+<h3>Email: <a href="mailto:daniel@bondfire.co">daniel@bondfire.co</a><br/>Twitter: <a href="http://twitter.com/danielwilber">@danielwilber</a></h3>
