--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 ---
 layout: default
-title: "Daniel Wilber, Product Designer"
+title: "Daniel Wilber"
 ---
 
-<h1>Hello, my name is Daniel Wilber.</h1>
-<h2>I co-founded a web design and development company called <a href="http://bondfire.co">Bondfire</a>.</h2>
-<h3>Email: <a href="mailto:daniel@bondfire.co">daniel@bondfire.co</a><br/>Twitter: <a href="http://twitter.com/danielwilber">@danielwilber</a></h3>
+<div id="home-intro">
+  <img src="assets/img/dw.jpg" alt="Daniel Wilber" />
+  <h1>Hello, my name is Daniel Wilber.</h1>
+</div>
+
+<div id="home-content">
+  <h2>
+    I am partner &amp; co-founder of a web design and development company called <a href="http://bondfire.co">Bondfire</a>.
+  </h2>
+  <h3>
+    Email: <a href="mailto:daniel@bondfire.co">daniel@bondfire.co</a><br/>
+    Twitter: <a href="http://twitter.com/danielwilber">@danielwilber</a>
+  </h3>
+</div>
